--- a/QL_SinhVien_Hibernate_Feature2/src/main/resources/messages.properties
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
-NotEmpty.userLogin.userName= Tên đăng nhập không được để trống
-NotEmpty.userLogin.password= Mật khẩu không được để trống  
+NotEmpty.userLogin.userName= User name not be empty
+NotEmpty.userLogin.password= Password not be empty
 Size.studentLogin.userName= Tên đăng nhập phải từ 5 - 20 ký tự   
 NotEmpty.student.studentName = Tên không được để trống
 NotEmpty.student.studentCode = Mã không được để trống
