--- a/QL_SinhVien_Hibernate_Feature2/src/main/resources/messages.properties
+++ b/QL_SinhVien_Hibernate_Feature2/src/main/resources/messages.properties
@@ -7,4 +7,7 @@ Range.student.averageScore = Điểm phải là số và có giá trị từ 0 -
 NotNull.student.averageScore = Điểm không được để trống
 DateTimeFormat.student.dateOfBirth = Ngày sinh không hợp lệ
 Past.student.dateOfBirth = Ngày sinh phải nhỏ hơn ngày hiện tại
-typeMismatch.student.averageScore = Định dạng không đúng
+typeMismatch.studentInfo.averageScore = Định dạng không đúng
+typeMismatch.studentInfo.dateOfBirth = Định dạng không đúng
+DecimalMax.studentInfo.averageScore = Điểm tối đa là 10
+DecimalMin.studentInfo.averageScore = Điểm tối thiểu là 0
